--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RockBee</string>
+    <string name="settings">Настройки</string>
+    <string name="catalog">Каталог</string>
+    <string name="isPlaying">Аудио</string>
 </resources>
