--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="settings">Настройки</string>
     <string name="catalog">Каталог</string>
     <string name="isPlaying">Аудио</string>
+    <string name="isLooping">Режим повторения по умолчанию:</string>
+    <string name="isRandom">Случайный порядок по умолчанию</string>
+    <string name="loop0">Без повторений</string>
+    <string name="loop1">Повторять все</string>
+    <string name="loop2">Повторять один трек</string>
+    <string name="apply">Принять изменения</string>
+    <string name="cg">Количество файлов</string>
 </resources>
