Music is ready. Playlist is started.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="loop2">Повторять один трек</string>
     <string name="apply">Принять изменения</string>
     <string name="cg">Количество файлов</string>
+    <string name="emptyCatalog">Нет файлов или каталогов</string>
+    <string name="emptyPlaylist">Сейчас ничего не проигрывается</string>
 </resources>
