Beta 0.24 Added swipe menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="lily_darkPurple">Лиловый/Темно-фиолетовый</string>
     <string name="darkPurple_turquoise">Темно-фиолетовый/Бирюзовый</string>
     <string name="pink_olive">Розовый/Оливковый</string>
+    <string name="saved">Сохранено</string>
 </resources>
