bugfix dont stop music

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="saved">Сохранено</string>
     <string name="cantPlay">Не могу найти треков для воспроизведения</string>
     <string name="cantDelete">Не удалось удалить</string>
+    <string name="nowPlays">Сейчас играет:</string>
 </resources>
