Beta 0.3 Made great service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,8 @@
     <string name="nowPlays">Сейчас играет:</string>
     <string name="cantConnect">Соединение не удалось</string>
     <string name="tryAgain">Попытайтесь еще раз</string>
+    <string name="prev">Предыдущий трек</string>
+    <string name="next">Следующий трек</string>
+    <string name="play">Воспроизводить</string>
+    <string name="pause">Приостановить</string>
 </resources>
