Beta 0.32 Added Client-server connection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="deleteQ">Удалить?</string>
     <string name="delete">Удалить</string>
     <string name="addToPlaylist">Добавить в плейлист</string>
-    <string name="deleteFromNowPlays">Удалить из текущего плейлиста?</string>
+    <string name="deleteFromNowPlays">Удалить из текущего плейлиста</string>
     <string name="addToNowPlays">Добавить в текущий плейлист</string>
     <string name="addNowPlays">Сохранить текущий плейлист</string>
     <string name="chooseColor">Выбрать тему:</string>
@@ -65,7 +65,6 @@
     <string name="name">Имя: </string>
     <string name="noInternet">Нет подключения к интернету</string>
     <string name="ready">Готово</string>
-    <string name="whyNeedName">Введите имя, по которому Ваши друзья смогу найти Вас</string>
     <string name="createMy">Создать комнату</string>
     <string name="foundFriend">Найти комнату друга</string>
     <string name="changeName">Сменить имя</string>
@@ -73,13 +72,33 @@
     <string name="deleteAfterEnd">Удалять треки после отключения от комнаты</string>
     <string name="listUsers">Список участников</string>
     <string name="deleteRoom">Закрыть комнату</string>
-    <string name="numbersOfUsers">Количество участников: </string>
+    <string name="numbersOfUsers">Список участников: </string>
     <string name="against">Пропуск: </string>
     <string name="off">Отключиться от комнаты</string>
     <string name="playToo">Воспроизводить треки из списка</string>
     <string name="pass">Пропустить трек</string>
-    <string name="findByNameOrUUID">Найти по имени или UUID</string>
+    <string name="findByNameOrUUID">Найти комнату по UUID</string>
     <string name="enterData">Введите данные</string>
     <string name="loadingCatalog">Сканирую каталог, пожалуйста подождите</string>
     <string name="loadingCatalogComplete">Сканирование завершено</string>
+    <string name="close">Закрыть</string>
+    <string name="yourUUID">Ваш UUID:</string>
+    <string name="friendUUID">UUID друга:</string>
+    <string name="stopPlaying">Прекратить воспроизведение</string>
+    <string name="UUID">UUID: </string>
+    <string name="tracks">Список треков</string>
+    <string name="addToTheServer">Добавить в очередь на сервер</string>
+    <string name="cantPlayWithServer">Не могу проигрывать, пока Вы подключены к серверу</string>
+    <string name="setPass">Установить пароль</string>
+    <string name="enterPass">Введите пароль</string>
+    <string name="passForRoom">Пароль для комнаты</string>
+    <string name="enterUUID">Введите UUID</string>
+    <string name="info">Информация о комнате</string>
+    <string name="password">Пароль комнаты: </string>
+    <string name="somethingCreateError">Произошла ошибка, попробуйте повторить</string>
+    <string name="whatAreYouDoing">Что Вы хотите сделать?</string>
+    <string name="wrongPassword">Пароль неверный</string>
+    <string name="wrongRoom">Комната не найдена</string>
+    <string name="closedRoom">Комната закрыта</string>
+    <string name="noPassword">Нет пароля</string>
 </resources>
